<resources>
    <string name="app_name" translatable="false">ToDoApp</string>
    <string name="my_business">My business</string>
    <string name="save">Save</string>
    <string name="what_to_do">What to do...</string>
    <string name="importance">Importance</string>
    <string name="deadline">Deadline</string>
    <string name="delete">Delete</string>
    <string name="none">None</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="done_count">Done — %1$d</string>
    <string name="no_network">Synchronization failed. Check your network connection.</string>
    <string name="authorization_error">Authorization error. Please contact our support.</string>
    <string name="other_error">Today is not your lucky day, something bad happened…</string>
    <string name="add_item_error">Error happened on item addition</string>
    <string name="update_item_error">Error happened on item update</string>
    <string name="remove_item_error">Error happened on item remove</string>
    <string name="preference_file_key" translatable="false">ru.winpeguin.todoapp.PREFERENCE_FILE_KEY</string>
    <string name="settings">Settings</string>
    <string name="always_light">Always light</string>

    <string-array name="importances">
        <item>@string/none</item>
        <item>@string/low</item>
        <item>@string/high</item>
    </string-array>
    <string name="always_dark">Always dark</string>
    <string name="system">System</string>
</resources>