<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="4dp"
        android:background="?attr/bgPrimary">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="17dp"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="?attr/blue"
            android:textSize="14sp"
            tools:text="Сохранить" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/todo_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners_bg"
                android:elevation="4dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:hint="@string/what_to_do"
                android:minHeight="104dp"
                android:padding="16dp"
                android:textColor="?attr/labelPrimary"
                android:textColorHint="?attr/labelTertiary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/importance_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/importance"
                android:textSize="16sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/todo_text" />

            <Spinner
                android:id="@+id/importance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@android:color/transparent"
                android:minWidth="164dp"
                android:minHeight="16dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/importance_label" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="?attr/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/importance_spinner" />

            <TextView
                android:id="@+id/deadline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/deadline"
                android:textSize="16sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_1" />

            <TextView
                android:id="@+id/deadline_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="?attr/blue"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline_label"
                tools:text="2 июня 2023"
                tools:visibility="visible" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/deadline_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/deadline_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/deadline_label" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="?attr/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline_switch" />

            <TextView
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical|start"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/delete"
                android:textColor="@color/remove_text_button_colors"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/delete"
                app:drawableTint="@color/remove_text_button_colors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginBottom="61dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>